Removing browser settings

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/pmg" href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png">
-    <title>Bienvenido a Chatu</title>
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png">
+    <title>¡Bienvenido a Chatu!</title>
   </head>
   <body>
     <div id="root"></div>
