Modifying the backend router and generating first interactivity from frontend to backend with MongoDB

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet" />
     <title>¡Bienvenido a Chatu!</title>
   </head>
   <body>
