Migrating from npx create-react-app to vite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1041/1041916.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet" />
-    <title>¡Bienvenido a Chatu!</title>
+    <title>¡Bienvenido a Chatu!⁄</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
